--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
 <head>
 	<title>Anagram Checker</title>
+	<link rel="stylesheet" type="text/css" href="anagram.css">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 <body>
-	
-  		<input type="text" name="word1" id="word1"><br>
-  		<input type="text" name="word2" id="word2"><br>
-  		<input type="submit" onclick="startCheck()" value="Check Words">
+	<div id="container">
+		<header><p>Anagram Checker</p></header>
+			
+
+		
+		<div id="main">
+			<input type="text" name="word1" id="word1" class="input" placeholder="Enter first word..."><br>
+  			<input type="text" name="word2" id="word2" class="input" placeholder="Enter second word..."><br>
+  			<input type="submit" onclick="startCheck()" value="Check Words" id="submit">
   		<p id="result"></p>
+		</div>
+		
+	</div>
+  		
 	
 	<script type="text/javascript" src="anagram-checker.js"></script>
 </body>
