--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="main">
 			<input type="text" name="word1" id="word1" class="input" placeholder="Enter first word..."><br>
   			<input type="text" name="word2" id="word2" class="input" placeholder="Enter second word..."><br>
-  			<input type="submit" onclick="startCheck()" value="Check Words" id="submit">
+  			<button type="button" onclick="startCheck()">Check If Words Are Anagrams</button>
   		<p id="result"></p>
 		</div>
 		
