--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 		
 		<div id="main">
-			<input type="text" name="word1" id="word1" class="input" placeholder="Enter first word..."><br>
-  			<input type="text" name="word2" id="word2" class="input" placeholder="Enter second word..."><br>
-  			<button type="button" onclick="startCheck()">Check If Words Are Anagrams</button>
+			<input type="text" name="word1" id="word1" class="input" placeholder="Enter first word(s)..."><br>
+  			<input type="text" name="word2" id="word2" class="input" placeholder="Enter second word(s)..."><br>
+  			<button type="button" onclick="startCheck()">Check Words</button>
   		<p id="result"></p>
 		</div>
 		
